chore: docker and apache config

--- a/.docker/apache2/fuzhana.conf
+++ b/.docker/apache2/fuzhana.conf
@@ -8,11 +8,7 @@
     # SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
 
     <FilesMatch \.php$>
-        # when using PHP-FPM as a unix socket
-        SetHandler proxy:unix:/var/run/php/php8.2-fpm.sock|fcgi://dummy
-
-        # when PHP-FPM is configured to use TCP
-        # SetHandler proxy:fcgi://127.0.0.1:9000
+        SetHandler "proxy:fcgi://127.0.0.1:9000"
     </FilesMatch>
 
     DocumentRoot /server/public
