--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,6 @@
 name: fuzhana
 
 services:
-  web:
-    build: .
-    container_name: fuzhana_web
-    hostname: fuzhana_web
-    ports:
-      - "3000:80"
-    volumes:
-      - ./:/server
   db:
     image: mysql:latest
     container_name: fuzhana_db
@@ -22,5 +14,21 @@ services:
     ports:
       - "3306:3306"
 
+  web:
+    container_name: fuzhana_nginx
+    image: nginx:latest
+    ports:
+      - "3000:80"
+    volumes:
+      - ./:/var/www/html
+      - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
+    links:
+      - php-fpm
+
+  php-fpm:
+    container_name: fuzhana_php
+    image: php:8-fpm
+    volumes:
+      - ./:/var/www/html
 volumes:
   db-data:
