--- a/.docker/nginx/default.conf
+++ b/.docker/nginx/default.conf
@@ -1,9 +1,9 @@
 server {
-    index index.php index.html;
     server_name phpfpm.local;
+    index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
-    root /var/www/html/public;
+    root /var/www/project/public;
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
