--- a/compose.yaml
+++ b/compose.yaml
@@ -20,15 +20,17 @@ services:
     ports:
       - "3000:80"
     volumes:
-      - ./:/var/www/html
+      - ./:/var/www/project
       - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     links:
       - php-fpm
 
   php-fpm:
     container_name: fuzhana_php
-    image: php:8-fpm
+    build:
+      context: ./.docker/php-fpm
+      dockerfile: ./dockerfile
     volumes:
-      - ./:/var/www/html
+      - ./:/var/www/project
 volumes:
   db-data:
