--- a/compose.yaml
+++ b/compose.yaml
@@ -12,7 +12,7 @@ services:
   db:
     image: mysql:latest
     container_name: fuzhana_db
-    hostname: fuzhana_db
+    hostname: root
     command: --default-authentication-plugin=mysql_native_password
     restart: unless-stopped
     environment:
