--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
+APP_DEBUG=1
 APP_ENV=dev
 APP_SECRET=46f8da66a9b76c5e045a0037208d83f6
 ###< symfony/framework-bundle ###
