--- a/.docker/php-fpm/dockerfile
+++ b/.docker/php-fpm/dockerfile
@@ -2,7 +2,12 @@ FROM php:8-fpm
 
 RUN apt update
 
-RUN apt install -y curl git
+RUN apt install -y curl \
+    git
+
+RUN docker-php-ext-configure pdo_mysql && \
+    docker-php-ext-install pdo_mysql
+
 
 RUN usermod -u 1000 www-data
 RUN usermod -a -G www-data root
