--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,8 @@ services:
       - db-data:/var/lib/mysql
     ports:
       - "3306:3306"
+    networks:
+      - mysql-network
 
   web:
     container_name: fuzhana_nginx
@@ -24,13 +26,22 @@ services:
       - ./.docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     links:
       - php-fpm
+    networks:
+      - mysql-network
 
   php-fpm:
     container_name: fuzhana_php
+    depends_on:
+      - db
     build:
       context: ./.docker/php-fpm
       dockerfile: ./dockerfile
     volumes:
       - ./:/var/www/project
+    networks:
+      - mysql-network
 volumes:
   db-data:
+
+networks:
+  mysql-network:
