fix: repository using db

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,7 @@ services:
     # please note that last definitions always *replace* previous ones
 
     # Binding interface
-    App\Repository\Interfaces\QuizRepositoryInterface: '@App\Repository\Mocks\QuizRepository'
-    App\Repository\Interfaces\UserRepositoryInterface: '@App\Repository\Mocks\UserRepository'
+#    App\Repository\Interfaces\QuizRepositoryInterface: '@App\Repository\Mocks\QuizRepository'
+    App\Repository\Interfaces\QuizRepositoryInterface: '@App\Repository\QuizRepository'
+#    App\Repository\Interfaces\UserRepositoryInterface: '@App\Repository\Mocks\UserRepository'
+    App\Repository\Interfaces\UserRepositoryInterface: '@App\Repository\UserRepository'
